Update api endpoints and sync frontend client definitions
